[tool.poetry]
name = "pymultilint"
packages = [{include = "multilint.py"}]
version = "0.18.0"
description = "Utility tying multiple code quality tools together"
authors = ["George Kontridze <george.kontridze@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gkze/multilint"
repository = "https://github.com/gkze/multilint"
documentation = "https://gkze.github.io/multilint/multilint.html"
keywords = ["lint", "code-quality", "tools"]

[tool.poetry.dependencies]
python = "^3.8"
pydocstyle = "^6.1.1"
autoflake = "^1.4"
isort = "^5.10.1"
pylint = "^2.14.4"
toml = "^0.10.2"
black = "^22.6.0"
mypy = ">=0.961,<0.972"
pyupgrade = "^2.34.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
jedi = "^0.18.1"
parso = "^0.8.3"
sphinx-rtd-theme = "^1.0.0"
pdoc = "^12.0.2"
types-toml = "^0.10.8"

[tool.poetry.scripts]
multilint = "multilint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.multilint]
src_paths = ["*.py", "docs"]

[tool.autoflake]
recursive = true
in_place = true
ignore_init_module_imports = true
remove_all_unused_imports = true
remove_unused_variables = true
verbose = true

[tool.mypy]
files = ["*.py"]

[tool.pyupgrade]
src_paths = ["*.py", "**/*.py"]
min_version = "3.9"

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation", "dangerous-default-value"]
