[tool.poetry]
name = "pymultilint"
packages = [{include = "multilint.py"}]
version = "0.23.0"
description = "Utility tying multiple code quality tools together"
authors = ["George Kontridze <george.kontridze@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gkze/multilint"
repository = "https://github.com/gkze/multilint"
documentation = "https://gkze.github.io/multilint/multilint.html"
keywords = ["lint", "code-quality", "tools"]

[tool.poetry.dependencies]
python = "^3.10"
pydocstyle = "^6.3.0"
autoflake = "^2.0.2"
isort = "^5.12.0"
pylint = "^2.17.2"
toml = "^0.10.2"
black = "^23.3.0"
mypy = "^1.2.0"
pyupgrade = "^3.3.1"

[tool.poetry.dev-dependencies]
ipython = "^8.12"
jedi = "^0.18"
parso = "^0.8"
sphinx-rtd-theme = "^1.2"
pdoc = "^13.1"
types-toml = "^0.10"

[tool.poetry.scripts]
multilint = "multilint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.multilint]
src_paths = ["*.py", "docs"]

[tool.autoflake]
recursive = true
ignore_init_module_imports = true
remove_all_unused_imports = true
remove_unused_variables = true
verbose = true

[tool.mypy]
files = ["*.py"]

[tool.pyupgrade]
src_paths = ["*.py", "**/*.py"]
min_version = "3.9"

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation", "dangerous-default-value"]
