[tool.poetry]
name = "pymultilint"
packages = [{include = "multilint.py"}]
version = "1.0.3"
description = "Utility tying multiple code quality tools together"
authors = ["George Kontridze <george.kontridze@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gkze/multilint"
repository = "https://github.com/gkze/multilint"
documentation = "https://gkze.github.io/multilint/multilint.html"
keywords = ["lint", "code-quality", "tools"]

[tool.poetry.dependencies]
python = "^3.8"
autoflake = "^2.0"
black = "^23.3"
isort = "^5.12"
mypy = "^1.2"
pydocstyle = "^6.3"
pylint = "^2.17"
pyupgrade = "^3.3"
toml = "^0.10"

[tool.poetry.scripts]
multilint = "multilint:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12"
jedi = "^0.18"
parso = "^0.8"
pdoc = "^13.1"
sphinx-rtd-theme = "^1.2"
types-pyflakes = "^3.0.0.3"
types-toml = "^0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.multilint]
src_paths = ["*.py"]

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-rhs-for-unused-variables = true

[tool.mypy]
mypy_path = "stubs"

[tool.pyupgrade]
min_version = "3.8"

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation", "dangerous-default-value"]
